fix: 요청 사항 수정